deployed it to http://maven.aksw.org/archiva/#artifact/org.dice-research/gerbilQABencmarkingTemplate

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,18 @@
         <url>http://repo.spring.io/milestone</url>
     </pluginRepository>
 	</pluginRepositories>
-  
+	<!-- DISTRIBUTION MANAGEMENT -->
+	<distributionManagement>
+		<repository>
+			<id>maven.aksw.internal</id>
+			<url>http://maven.aksw.org/archiva/repository/internal</url>
+		</repository>
+		<snapshotRepository>
+			<id>maven.aksw.snapshots</id>
+			<name>AKSW Snapshot Repository</name>
+			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>  
 	<build>
 		<plugins>
 			<plugin>
